--- a/Cap.Web/Areas/Erp/Views/SistemaArea/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaArea/Create.cshtml
@@ -1,34 +1,60 @@
 ﻿@model Cap.Domain.Models.Admin.SistemaArea
 
-@{
-    ViewBag.Title = "Área do sistema";
-}
-
-<h2>Área do sistema</h2>
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
-            </div>
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="close close-modal" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+            <h4 class="modal-title">Área do sistema</h4>
         </div>
+        <div class="modal-body">
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Incluir" class="btn btn-default" />
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-horizontal">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.AlteradoPor)
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="button" value="Incluir" class="btn btn-default create-area-modal" />
+                        </div>
+                    </div>
+                </div>
+            }
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default close-modal" data-dismiss="modal">Fechar</button>
             </div>
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Voltar", "Index")
 </div>
+
+<script type="text/javascript">
+    $('.create-area-modal').click(function () {
+        var self = $(this);
+
+        $.ajax({
+            url: '/Erp/SistemaArea/Create',
+            type: 'POST',
+            data: self.closest('form').serialize(),
+            datatype: 'html',
+            success: function (data) {
+                if (success == true) {
+                    $('#modal').modal('hide');
+                    location.reload(false);
+                } else {
+                    $('#modal').html(data);
+                }
+            }
+        });
+    });
+</script>
