--- a/Cap.Web/Areas/Erp/Views/SistemaRegra/Delete.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaRegra/Delete.cshtml
@@ -1,65 +1,94 @@
 ﻿@model Cap.Domain.Models.Admin.SistemaRegra
 
-@{
-    ViewBag.Title = "Regra do sistema";
-}
-
-<h2>Regra do sistema</h2>
-
-<p class="alert alert-danger top20">
-    Confirma a exclusão desta regra?
-</p>
-<div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Descricao)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Descricao)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Observ)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Observ)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Ativo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Ativo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AlteradoPor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Usuario.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AlteradoEm)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AlteradoEm)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Excluir" class="btn btn-default" /> |
-            @Html.ActionLink("Voltar", "Index")
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="close close-modal" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+            <h4 class="modal-title">Excluir regra</h4>
         </div>
-    }
-</div>
+        <div class="modal-body">
+
+            <h4 class="text-danger">Confirma a exclusão desta regra?</h4>
+
+            <div>
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Descricao)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Descricao)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Observ)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Observ)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Ativo)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Ativo)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.AlteradoPor)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Usuario.Nome)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.AlteradoEm)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.AlteradoEm)
+                    </dd>
+
+                </dl>
+
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-actions no-color">
+                        <input type="button" data-id='@Model.Id' value="Excluir" class="btn btn-default delete-role" />
+                    </div>
+                }
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default close-modal" data-dismiss="modal">Fechar</button>
+        </div>
+    </div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+
+<script type="text/javascript">
+
+    $('.delete-role').click(function () {
+        
+        var id = $(this).attr('data-id');
+
+        $.ajax({
+            url: '/Erp/SistemaRegra/Delete',
+            type: 'POST',
+            data: { 'id': id },
+            datatype: 'hjtml',
+            success: function (data) {
+                if (data.success == true) {
+                    $('#modal').modal('hide');
+                    location.reload(false);
+                } else {
+                    $('#modal').html(data);
+                }
+            }
+        });
+    });
+</script>
