--- a/Cap.Web/Areas/Erp/Views/SistemaRegra/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaRegra/Edit.cshtml
@@ -4,7 +4,7 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close close-modal" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-            <h4 class="modal-title">Editar regra</h4>
+            <h4 class="modal-title">Regra do sistema</h4>
         </div>
         <div class="modal-body">
 
