--- a/Cap.Web/Areas/Erp/Views/SistemaTela/Delete.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaTela/Delete.cshtml
@@ -1,90 +1,115 @@
 ﻿@model Cap.Domain.Models.Admin.SistemaTela
 
-@{
-    ViewBag.Title = "Tela do sistema";
-}
-
-<h2>Tela do sistema</h2>
-
-<p class="alert alert-danger top20">
-    Confirma a exclusão desta tela do sistema?
-</p>
-<div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TextoMenu)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TextoMenu)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Link)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Link)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Descricao)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Descricao)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IdSistemaArea)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SistemaArea.Descricao)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IdSistemaRegra)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SistemaRegra.Descricao)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Ativo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Ativo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AlteradoPor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Usuario.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AlteradoEm)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AlteradoEm)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.Id)
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Excluir" class="btn btn-default" /> |
-            @Html.ActionLink("Voltar", "Index")
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="close close-modal" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+            <h4 class="modal-title">Excluir tela</h4>
         </div>
-    }
+        <div class="modal-body">
+
+            <h4 class="text-danger">Confirma a exclusão desta tela do sistema?</h4>
+
+            <div>
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.TextoMenu)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.TextoMenu)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Link)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Link)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Descricao)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Descricao)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.IdSistemaArea)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.SistemaArea.Descricao)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.IdSistemaRegra)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.SistemaRegra.Descricao)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Ativo)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Ativo)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.AlteradoPor)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Usuario.Nome)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.AlteradoEm)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.AlteradoEm)
+                    </dd>
+
+                </dl>
+
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-actions no-color">
+                        <input type="button" value="Excluir" data-id="@Model.Id" class="btn btn-danger tela-delete" />
+                    </div>
+                }
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default close-modal" data-dismiss="modal">Fechar</button>
+        </div>
+    </div>
 </div>
+
+<script type="text/javascript">
+    $('.tela-delete').click(function () {
+        var id = $(this).attr('data-id');
+        $.ajax({
+            url: '/Erp/SistemaTela/Delete/',
+            type: 'POST',
+            data: { 'id': id },
+            datatype: 'html',
+            success: function (data) {
+                if (data.success == true) {
+                    $('#modal').modal('hide');
+                    location.reload(false);
+                } else {
+                    $('#modal').html(data);
+                }
+            }
+        });
+    });
+</script>
