--- a/Cap.Web/Areas/Erp/Views/SistemaTela/Delete.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaTela/Delete.cshtml
@@ -45,12 +45,20 @@
                     </dd>
 
                     <dt>
-                        @Html.DisplayNameFor(model => model.IdSistemaRegra)
+                        @Html.DisplayNameFor(model => model.Regra)
                     </dt>
 
                     <dd>
-                        @Html.DisplayFor(model => model.SistemaRegra.Descricao)
+                        @Html.DisplayFor(model => model.Regra)
                     </dd>
+
+                    <dd>
+                        @Html.DisplayNameFor(model => model.Menu)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayFor(model => model.Menu)
+                    </dt>
 
                     <dt>
                         @Html.DisplayNameFor(model => model.Ativo)
