--- a/Cap.Web/Areas/Erp/Views/SistemaTela/Details.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaTela/Details.cshtml
@@ -43,11 +43,19 @@
                     </dd>
 
                     <dt>
-                        @Html.DisplayNameFor(model => model.IdSistemaRegra)
+                        @Html.DisplayNameFor(model => model.Regra)
                     </dt>
 
                     <dd>
-                        @Html.DisplayFor(model => model.SistemaRegra.Descricao)
+                        @Html.DisplayFor(model => model.Regra)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Menu)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Regra)
                     </dd>
 
                     <dt>
