--- a/Cap.Web/Areas/Erp/Views/SistemaRegra/Details.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaRegra/Details.cshtml
@@ -20,11 +20,11 @@
                     </dd>
 
                     <dt>
-                        @Html.DisplayNameFor(model => model.Observ)
+                        @Html.DisplayNameFor(model => model.Sufixo)
                     </dt>
 
                     <dd>
-                        @Html.DisplayFor(model => model.Observ)
+                        @Html.DisplayFor(model => model.Sufixo)
                     </dd>
 
                     <dt>
