--- a/Cap.Web/Areas/Erp/Views/SistemaRegra/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaRegra/Index.cshtml
@@ -16,7 +16,7 @@
             @Html.DisplayNameFor(model => model.Descricao)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Observ)
+            @Html.DisplayNameFor(model => model.Sufixo)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Ativo)
@@ -30,7 +30,7 @@
             @Html.DisplayFor(modelItem => item.Descricao)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Observ)
+            @Html.DisplayFor(modelItem => item.Sufixo)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Ativo)
