--- a/Cap.Web/Areas/Erp/Views/SistemaRegra/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaRegra/Edit.cshtml
@@ -27,10 +27,10 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Observ, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Sufixo, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Observ, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Observ, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.Sufixo, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Sufixo, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
