--- a/Cap.Web/Areas/Erp/Views/Usuario/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Usuario/Index.cshtml
@@ -55,8 +55,8 @@
         <td>
             @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Excluir", "Delete", new { id=item.Id })
-            @Html.ActionLink("Permissões", "Acesso", new { id=item.Id })
+            @Html.ActionLink("Excluir", "Delete", new { id=item.Id }) |
+            @Html.ActionLink("Permissões", "Index", "Acesso", new { id=item.Id }, null)
         </td>
     </tr>
 }
