--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Erp FGT", "Index", "Home", new { area = "Erp" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Erp CIAL", "Index", "Home", new { area = "Erp" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
 
