--- a/Cap.Web/Areas/Erp/Views/IndVariacao/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/IndVariacao/Index.cshtml
@@ -14,6 +14,8 @@
 
 <div id="variacao"></div>
 
+<div id="modal" class="modal"></div>
+
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script type="text/javascript">
 
