--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -32,7 +32,8 @@
                                 <li><a href="/Erp/EstadoCivil">Estado civil</a></li>
                                 <li><a href="/Erp/Estado">Estados da união</a></li>
                                 <li><a href="/Erp/Feriado">Feriados</a></li>
-                                <li><a href="/Erp/Indice">Índices</a></li>
+                                <li><a href="/Erp/Indice">Índices - cadastro</a></li>
+                                <li><a href="/Erp/IndVariacao/VariacoesIndices">Índices - variações</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/Erp/Empresa">Empresa</a></li>
                                 <li><a href="/Erp/Departamento">Departamentos</a></li>
