--- a/Cap.Web/Areas/Erp/Views/Pedido/Create.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Pedido/Create.cshtml
@@ -2,7 +2,7 @@
 @model Cap.Domain.Models.Cap.Pedido
 
 @{
-    ViewBag.Title = "Novo pedido";
+    ViewBag.Title = "Novo pedido"
 }
 
 <h2>Novo Pedido</h2>
