--- a/Cap.Web/Content/Site.css
+++ b/Cap.Web/Content/Site.css
@@ -128,3 +128,9 @@ input[type="checkbox"].input-validation-error {
     /*margin-left: -175px !important; 
     margin-top: -175px !important;*/ 
 }
+
+/* glyphicon size */
+.gi-2x{font-size: 2em;}
+.gi-3x{font-size: 3em;}
+.gi-4x{font-size: 4em;}
+.gi-5x{font-size: 5em;}
