--- a/Cap.Web/Areas/Erp/Views/Pesquisa/Details.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Pesquisa/Details.cshtml
@@ -1,14 +1,10 @@
 ﻿@model Cap.Domain.Models.Cap.Parcela
 
-@{
-    ViewBag.Title = "Details";
-}
-
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close close-modal" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-            <h4 class="modal-title">Parcela do pedido n<sup>o</sup> @Model.IdPedido</h4>
+            <h4 class="modal-title">Parcela do pedido n<sup>o</sup> @Model.Id</h4>
         </div>
         <div class="modal-body">
             <dl class="dl-horizontal">
