--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/angular.min.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -16,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Erp CIAL", "Index", "Home", new { area = "Erp" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("ERP", "Index", "Home", new { area = "Erp" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
 
@@ -53,6 +55,14 @@
                                 <li><a href="/Erp/Unidade">Unidades</a></li>
                                 <li><a href="/Erp/MatGrupo">Grupos dos materiais</a></li>
                                 <li><a href="/Erp/Material">Materiais</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Débitos<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/Erp/Pesquisa">Pesquisar agendamentos</a></li>
+                                <li><a href="/Erp/Pedido/Create">Novo agendamento</a></li>
                             </ul>
                         </li>
 
